Haciendo un ultimo cambio

--- a/style.css
+++ b/style.css
@@ -57,6 +57,9 @@ h1 {
     border-radius: 9px;
     border: none;
     background-color: #003161;
+    color: #FFF4B7;
+    font-size: 1rem;
+    font-weight: bold;
 }
 
 .precio::placeholder, .cantidad::placeholder {
